--- a/movielens.ui
+++ b/movielens.ui
@@ -393,7 +393,7 @@
      <x>0</x>
      <y>0</y>
      <width>1210</width>
-     <height>37</height>
+     <height>43</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -426,11 +426,17 @@
    </property>
   </action>
   <action name="actionGuardar_modelo_entrenado">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Guardar modelo entrenado</string>
    </property>
   </action>
   <action name="actionExportar">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Exportar</string>
    </property>
